[package]
name = "rusty_pickaxe"
version = "0.0.1"
edition = "2018"

[dependencies]
rustc-hex = "*"
tiny-keccak = { version = "*", features = ["keccak"]}
web3 = "*"
tokio = { version = "*", features = ["full"] }
secp256k1 = { version = "*", features = ["recovery"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "*"
log = "*"
pretty-hex = "*"
bincode = "1.0"
rand = "*"
bigint = "*"
libc = "0.2"

[build-dependencies]
cc = "1.0"
