[package]
name = "rusty_pickaxe"
version = "0.0.1"
authors = ["Ledarium tg@amazing_booba"]
edition = "2018"
links = "cudart"

[dependencies]
rustc-hex = "*"
tiny-keccak = { version = "*", features = ["keccak"]}
web3 = "*"
tokio = { version = "*", features = ["full"] }
secp256k1 = { version = "*", features = ["recovery"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "*"
log = "*"
pretty-hex = "*"
bincode = "1.0"
rand = "*"
bigint = "*"
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", optional = true }

[features]
cuda = ["cc"]
