[package]
name = "rusty_pickaxe"
version = "0.0.4"
authors = ["Ledarium tg@amazing_booba"]
edition = "2018"
links = "cudart"
build = "build.rs"

[dependencies]
rustc-hex = "2.1.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"]}
web3 = "0.17.0"
tokio = { version = "1.11.0", features = ["rt", "macros"] }
secp256k1 = { version = "0.20.3", features = ["recovery"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.9.0"
log = "0.4.14"
pretty-hex = "0.2.1"
bincode = "1.0"
rand = "0.8.4"
bigint = "4.4.3"

[build-dependencies]
cc = { version = "1.0", optional = true }
built = "0.5"

[features]
cuda = ["cc"]
